# ParkInTelAviv

./: Cargo.toml  Procfile  Readme.md
src/: main.rs
static/: asset-manifest.json  index.html  precache-manifest.1d2bcf803d416ce85fc81d5b799a9641.js  precache-manifest.a4d9faa7684594da2f73ae5c58243746.js  precache-manifest.cd0d1d3e3b4e0023b8c0ef14c45b2dff.js  precache-manifest.f63b9b155a8d3ff269ca805f11bb2b8a.js  service-worker.js
static/static/css/: main.7b8e8582.chunk.css  main.7b8e8582.chunk.css.map  main.bf6b27e6.chunk.css  main.bf6b27e6.chunk.css.map
static/static/js/: 2.310261e2.chunk.js  2.310261e2.chunk.js.map  2.4766d6ce.chunk.js  2.4766d6ce.chunk.js.map  main.413a76e1.chunk.js  main.413a76e1.chunk.js.map  main.81c7cb13.chunk.js  main.81c7cb13.chunk.js.map  main.85d23059.chunk.js  main.85d23059.chunk.js.map  main.b3d96473.chunk.js  main.b3d96473.chunk.js.map  runtime-main.7f93841c.js  runtime-main.7f93841c.js.map
static/stylesheets/: styles.css
