[package]
name = "telaviv-pipline"
version = "0.1.0"
authors = ["Idan Shani <idan.shani32@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
scraper = "0.11.0"
reqwest = "0.9.22"
select = "0.4.3"
rocket_cors = "0.5.1"
rocket_contrib = "0.4.2"